syntax = "proto3";

option go_package = "GSS/proto";
package gss;


service goSystemStates {
    rpc uploadMetrics(UserMetricStorage) returns (Empty) {}
    rpc getUsersMetrics(Empty) returns (UsersMetrics) {}
    rpc metricsByUUID(MetricsByUUIDRequest) returns (MetricsByUUIDResponse) {}
}

message Empty {}

message UsersMetrics {
    map<string, MetricStorageArr> Data = 1;
}

message MetricStorageArr {
    repeated MetricStorage DataArr = 1;
}

message UserMetricStorage {
    string UUID = 1;
    MetricStorage Metric = 2;
}

message MetricStorage {
    int64 Timestamp = 1;
    map<string, uint32> Uint32Data = 2;
    map<string, uint64> Uint64Data = 3;
    map<string, double> Float64Data = 4;
}

message MetricsByUUIDRequest {
    string UUID = 1;
}

message MetricsByUUIDResponse {
    repeated MetricStorage DataArr = 1;
}
